--- a/style.css
+++ b/style.css
@@ -960,3 +960,17 @@ figcaption {
     -webkit-transition: all 0.7s ease;
     transition: all 0.7s ease;
 }
+/******annimation index********/
+article.col-3 {
+
+    -webkit-box-shadow: 0px 0px 15px 5px rgba(0, 3, 4, 0.31);
+    box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.28);
+    -webkit-transition: all 0.7s ease;
+    transition: all 0.7s ease;
+}
+article.col-3:hover {
+    -webkit-box-shadow: 0px 0px 15px 10px rgba(255, 255, 255, .75);
+    box-shadow: 0px 0px 15px 10px rgba(255, 255, 255, .75);
+}
+
+
